force-app/main/default/objects/CoveredItemsMaster__c/CoveredItemsMaster__c.object-meta.xml
<CustomObject>
    <description>Master table of items covered by vendor&apos;s maintenance contract</description>
    <label>CoveredItemMaster</label>
    <nameField>
        <label>CoveredItemsMaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoveredItemsMaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>