force-app/main/default/objects/CoveredItemsMaster__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schindler</fullName>
            </value>
            <value>
                <fullName>Otis</fullName>
            </value>
            <value>
                <fullName>Kone</fullName>
            </value>
            <value>
                <fullName>ThyssenKrupp</fullName>
            </value>
            <value>
                <fullName>Mitsubishi Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>